backend-services/signup/food-signup-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: food-signup-ingress
spec:
  rules:
    - host: signup.yourdomain.com
      http:
        paths:
          - path: /food-signup
            pathType: Prefix
            backend:
              service:
                name: food-signup-service
                port:
                  number: 80
